# Match

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  大纲.txt
Match/: CMakeLists.txt
Match/include/Match/: Match.hpp  commons.hpp  constant.hpp  types.hpp  utils.hpp
Match/include/Match/core/: loader.hpp  logger.hpp  setting.hpp  utils.hpp  window.hpp
Match/include/Match/imgui/: imgui.hpp
Match/include/Match/vulkan/: api_info.hpp  command_pool.hpp  commons.hpp  device.hpp  framebuffer.hpp  manager.hpp  renderer.hpp  renderpass.hpp  swapchain.hpp  types.hpp  utils.hpp
Match/include/Match/vulkan/descriptor/: descriptor.hpp  descriptor_pool.hpp  texture.hpp  uniform.hpp
Match/include/Match/vulkan/descriptor_resource/: descriptor_pool.hpp  descriptor_set.hpp  spec_texture.hpp  storage_buffer.hpp  storage_image.hpp  texture.hpp  uniform.hpp
Match/include/Match/vulkan/resource/: buffer.hpp  custom_data_registrar.hpp  gltf_scene.hpp  image.hpp  model.hpp  model_acceleration_structure.hpp  push_constants.hpp  ray_tracing_instance.hpp  ray_tracing_instance_collect.hpp  renderpass_builder.hpp  resource_factory.hpp  sampler.hpp  shader.hpp  shader_includer.hpp  shader_program.hpp  vertex_attribute_set.hpp  vertex_buffer.hpp  volume_data.hpp
Match/src/Match/: utils.cpp
Match/src/Match/core/: loader.cpp  logger.cpp  setting.cpp  stb_image.cpp  transform.cpp  utils.cpp  window.cpp
Match/src/Match/imgui/: imgui.cpp
Match/src/Match/vulkan/: command_pool.cpp  device.cpp  framebuffer.cpp  inner.cpp  inner.hpp  manager.cpp  renderer.cpp  renderpass.cpp  runtime_setting.cpp  swapchian.cpp  transform.cpp  utils.cpp
Match/src/Match/vulkan/descriptor/: descriptor_pool.cpp  texture.cpp  uniform.cpp
Match/src/Match/vulkan/descriptor_resource/: descriptor_pool.cpp  descriptor_set.cpp  storage_image.cpp  texture.cpp  uniform.cpp
Match/src/Match/vulkan/reource/: buffer.cpp  gltf_scene.cpp  image.cpp  model.cpp  model_acceleration_structure.cpp  push_constants.cpp  ray_tracing_instance.cpp  ray_tracing_instance_collect.cpp  renderpass_builder.cpp  reource_factroy.cpp  sampler.cpp  shader.cpp  shader_includer.cpp  shader_includer.hpp  shader_program.cpp  vertex_attribute_set.cpp  vertex_buffer.cpp  volume_data.cpp
Sandbox/: CMakeLists.txt
Sandbox/resource/shaders/: shader.frag  shader.vert
Sandbox/src/: main.cpp
examples/: CMakeLists.txt
examples/GLTF/: CMakeLists.txt
examples/GLTF/resource/shaders/: shader.frag  shader.vert
examples/GLTF/src/: camera.cpp  gltf_model.cpp  gltf_model.hpp  gltf_scene.cpp  gltf_scene.hpp  main.cpp
examples/RayTracing/: CMakeLists.txt
examples/RayTracing/resource/shaders/: raster.frag  raster.vert  ray.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_shadow.rmiss  shader.frag
examples/RayTracing/src/: camera.cpp  camera.hpp  main.cpp  utils.cpp  utils.hpp
examples/Sandbox/: CMakeLists.txt
examples/Sandbox/resource/shaders/: shader.frag  shader.vert
examples/Sandbox/src/: main.cpp
examples/Scene/: CMakeLists.txt
examples/Scene/resource/models/cornell_box/: scene.gltf
examples/Scene/resource/shaders/: shader.vert
examples/Scene/resource/shaders/dragon_shader/: main_subpass.frag  main_subpass.vert  post_subpass.frag  shader.frag  shader.vert
examples/Scene/resource/shaders/microfacet_theory_shader/: compute_hit_color.glsl  ray.glsl  rt.rgen  rt.rmiss  sphere.rchit
examples/Scene/resource/shaders/model_viewer_shader/: shader.frag  shader.vert
examples/Scene/resource/shaders/pbr_path_tracing_shader/: rt.rchit  rt.rgen  rt.rmiss
examples/Scene/resource/shaders/pbr_shader/: shader.frag  shader.vert
examples/Scene/resource/shaders/ray_tracing_shader/: rt.rchit  rt.rgen  rt.rmiss  rt_shadow.rmiss  rt_sphere.rchit  rt_sphere.rint  shader.frag  shader.vert
examples/Scene/resource/shaders/ray_tracing_v2_shader/: compute_hit_color.glsl  gltf.rchit  rt.rchit  rt.rgen  rt.rmiss  shader.frag  sphere.rchit  sphere.rint  triangle.rchit
examples/Scene/resource/shaders/raymarching_shader/: shader.frag  shader.vert
examples/Scene/resource/shaders/shadertoy/: ShaderToy.frag  ShaderToy.vert  editor.frag
examples/Scene/resource/shaders/ssao_shader/: main.frag  prepare.frag  prepare.vert  ssao.frag
examples/Scene/resource/shaders/volume_rendering_shader/: args.glsl  perlin_noise.glsl  ray.glsl  read_volume_data.glsl  rt.rgen  rt.rmiss  shader.frag  shader.vert  sphere.rchit  sphere.rint
examples/Scene/src/: application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  scene.cpp  scene.hpp  transfer_vdb.hpp
examples/Scene/src/scenes/: dragon_scene.cpp  dragon_scene.hpp  microfacet_theory_scene.cpp  microfacet_theory_scene.hpp  model_viewer_scene.cpp  model_viewer_scene.hpp  pbr_path_tracing_scene.cpp  pbr_path_tracing_scene.hpp  pbr_scene.cpp  pbr_scene.hpp  ray_tracing_scene.cpp  ray_tracing_scene.hpp  ray_tracing_v2_scene.cpp  ray_tracing_v2_scene.hpp  raymarching_scene.cpp  raymarching_scene.hpp  scene.cpp  scene.hpp  shadertoy_scene.cpp  shadertoy_scene.hpp  ssao_scene.cpp  ssao_scene.hpp  volume_rendering_scene.cpp  volume_rendering_scene.hpp
